検索機能のクエリ処理を簡素化し、画像アップロードフォームのスタイルを改善。発見日時の入力を強化し、画像アップロード時のユーザー体験を向上。

--- a/reclaim/templates/storeview/upload_image.html
+++ b/reclaim/templates/storeview/upload_image.html
@@ -1,46 +1,31 @@
 {% extends 'storeview/base.html' %}
 {% load static %}
 
-{% block title %}
-  画像アップロード
-{% endblock %}
+{% block title %}画像アップロード{% endblock %}
 
 {% block body %}
-  <link rel="stylesheet" href="/static/css/upload.css" />
-  <div class="upload-container">
-    <div class="upload-card">
-      <div class="card-body">
-        <h1 class="upload-title">画像アップロード</h1>
-        <form method="POST" enctype="multipart/form-data">
-          {% csrf_token %}
-          <div class="row">
-            <div class="col-md-6">
-              <div class="mb-3">
-                <label for="id_item_date" class="form-label">発見日時:</label>
-                <input type="date" name="item_date" id="id_item_date" class="form-control" required />
-              </div>
-            </div>
 
-            <div class="col-md-6">
-              <div class="mb-3">
-                <label for="id_item_lost_location" class="form-label">発見場所</label>
-                <input type="text" name="item_lost_location" maxlength="100" required id="id_item_lost_location" class="form-control" placeholder="発見された場所" />
-              </div>
-            </div>
-            
-            <div class="col-12">
-              <div class="mb-3">
-                <label for="id_item_image" class="form-label">画像</label>
-                <input type="file" name="item_image" accept="image/*" id="id_item_image" class="form-control" required />
-              </div>
-            </div>
-
-            <div class="col-12">
-              <button type="submit" class="btn btn-primary">アップロード</button>
-            </div>
-          </div>
-        </form>
-      </div>
+<link rel="stylesheet" href="/static/css/upload.css">
+<div class="upload-container">
+  <div class="upload-card">
+    <div class="card-body">
+      <h1 class="upload-title">画像アップロード</h1>
+      <form method="post" enctype="multipart/form-data" class="upload-form">
+        {% csrf_token %}
+        <div class="mb-3">
+          <label for="id_item_image" class="form-label">画像:</label>
+          <input type="file" name="item_image" accept="image/*" aria-describedby="id_item_image_helptext"
+            id="id_item_image" class="form-control" capture="camera">
+          <div class="form-text" id="id_item_image_helptext">アップロードする画像を選択してください。</div>
+        </div>
+        <div class="mb-3">
+          <label for="id_item_date" class="form-label">発見日時:</label>
+          <input type="date" name="item_date" id="id_item_date" class="form-control" required>
+        </div>
+        <button type="submit" class="upload-button">アップロード</button>
+      </form>
     </div>
   </div>
+</div>
+
 {% endblock %}
