AI生成データのフィールド名を変更し、関連するテンプレートとフォームを更新。キーワードの保存処理を改善し、データの整合性を強化。

--- a/reclaim/templates/storeview/AiGenerate.html
+++ b/reclaim/templates/storeview/AiGenerate.html
@@ -70,9 +70,9 @@
 
               <div class="col-12">
                 <div class="mb-3">
-                  <label for="id_ai_generated_json" class="form-label">生成されたキーワード</label>
-                  {{ form.ai_generated_json.errors }}
-                  <textarea name="ai_generated_json" rows="3" id="id_ai_generated_json" class="form-control">{{ gen }}</textarea>
+                  <label for="id_ai_generated_keywords" class="form-label">生成されたキーワード</label>
+                  {{ form.ai_generated_keywords.errors }}
+                  <textarea name="ai_generated_keywords" rows="3" id="id_ai_generated_keywords" class="form-control">{{ gen }}</textarea>
                 </div>
               </div>
 
