--- a/reclaim/templates/storeview/item_detail.html
+++ b/reclaim/templates/storeview/item_detail.html
@@ -44,8 +44,8 @@
             <div class="mb-4">
               <h5 class="text-muted mb-3">解析結果</h5>
               <p class="card-text">
-                {% if decoded.ai_json %}
-                  {{ decoded.ai_json }}
+                {% if decoded.ai_keywords %}
+                  {{ decoded.ai_keywords }}
                 {% endif %}
               </p>
             </div>
