--- a/reclaim/templates/userview/item_detail.html
+++ b/reclaim/templates/userview/item_detail.html
@@ -30,7 +30,7 @@
               <dt class="col-sm-3">
                 <i class="bi bi-tag me-2"></i>キーワード
               </dt>
-              <dd class="col-sm-9 mb-3">{{ decoded.ai_json }}</dd>
+              <dd class="col-sm-9 mb-3">{{ decoded.ai_keywords }}</dd>
 
               <dt class="col-sm-3">
                 <i class="bi bi-folder me-2"></i>カテゴリー
